# xsd-browser

./: CHANGELOG.md  README.md  claude.md  main.css  main.html.j2  main.js  pyproject.toml  xsd_browser.py  xsd_by_example.py
docs/: index.html
samples/DATEXII_3_Profile/: DATEXII_3_CISInformation.xsd  DATEXII_3_Common.xsd  DATEXII_3_CommonExtension.xsd  DATEXII_3_D2Payload.xsd  DATEXII_3_ExchangeInformation.xsd  DATEXII_3_Facilities.xsd  DATEXII_3_InformationManagement.xsd  DATEXII_3_LocationReferencing.xsd  DATEXII_3_MessageContainer.xsd  DATEXII_3_RoadTrafficData.xsd  DATEXII_3_Situation.xsd  DATEXII_3_TrafficManagementPlan.xsd  DATEXII_3_TrafficRegulation.xsd  DATEXII_3_UrbanExtensions.xsd  DATEXII_3_Vms.xsd
src/xsd_browser/: __main__.py  main.css  main.html.j2  main.js  main.py
tests/: conftest.py  test_import_resolver.py  test_inherited_elements.py  test_render_attributes.py  test_render_elements.py  test_render_groups.py  test_render_landing.py  test_render_simple_types.py  test_render_usages.py  test_utils.py
tests/samples/: inherited_elements_demo.xsd  test_attributes.xsd  test_elements.xsd  test_groups.xsd  test_simple_types.xsd
tests/samples/test_imports/: child_a.xsd  child_b.xsd  child_c.xsd  collision.xsd  collision_d.xsd  collision_e.xsd  main.xsd
