[project]
name = "xsd-browser"
version = "0.1.0"
description = "Generate HTML documentation from XSD using lxml and Jinja2"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "AGPL-3.0-or-later" }

authors = [
  { name = "David Koňařík" },  # Original author
  { name = "Roman Hořeňovský", email = "roman.horenovsky@tamtamresearch.com" },  # Fork author
]
maintainers = [
  { name = "Roman Hořeňovský", email = "roman.horenovsky@tamtamresearch.com" },
]

dependencies = [
  "lxml",
  "jinja2",
]

[project.optional-dependencies]
minify = ["minify-html"]

[project.scripts]
xsd-browser = "xsd_browser:main"

[project.urls]
Homepage = "https://www.tamtamresearch.com/"
Repository = "https://github.com/tamtamresearch/xsd-browser"
"Original Project" = "https://codeberg.org/dvdkon/xsd_by_example"
Issues = "https://github.com/tamtamresearch/xsd-browser/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"
lint.select = ["E", "F", "B", "I", "ASYNC"]
